# essidon

./: .gitignore  404.html  Cargo.toml  Procfile  README.md  build.rs  index.html  main.html  main.rs  package.json  rollup.config.js
css/: style.css
html/: astro.html  index.html
spa/: index.html
src/: crypto.rs  database.rs  db.rs  error.rs  main.rs  schema.sql  thread_pool.rs  user.rs  worker_pool.rs
src/auth/: mod.rs
src/config/: mod.rs
src/database/: error.rs  mod.rs  user.rs  user_registration.rs
src/routes/: auth.rs  chat.rs  database.rs  global.rs  mod.rs  spa.rs  templates.rs
src/session/: mod.rs  store.rs
src/user/: error.rs  login.rs  mod.rs  registration.rs  store.rs  view.rs
srv/: 404.html  about.html  global.css  index.html  style.css
svelte/: main.js
svelte/components/: App.svelte  Navbar.svelte  PasswordInput.svelte  TextInput.svelte  stores.js
svelte/routes/: About.svelte  Contact.svelte  Home.svelte  Login.svelte
views/: layouts.hbs  main.hbs
