[package]
name = "essidon"
version = "0.3.0"
authors = ["Drew Christensen <emoryandrewchristensen@gmail.com>"]
edition = "2018"

[build-dependencies]
npm_rs = "0.1.1"

[dependencies]

anyhow = "1.0"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"

tokio = { version = "1", features = [ "full" ] }
async-trait = "0.1.50"
warp = "0.3.1"
async-session = "3.0.0"
async-sqlx-session = { git = "https://github.com/CyrusAlbright/async-sqlx-session", features = [ "pg", "tokio_native_tls" ] }
warp-sessions = "1.0.15"
handlebars = "4.0.1"

sqlx = { version = "0.5.5", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "macros" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0"
bcrypt = "0.8.2"


[[bin]]
name = "essidon"
path = "src/main.rs"
